--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <link rel="stylesheet" href="css/MarkerCluster.Default.css">
         <style>
         #map {
-            width: 855px;
-            height: 596px;
+            width: 100%;
+            height: 100%;
         }
         </style>
         <title>BISELCO FRANCHISE MAP</title>
