--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <style>
         #map {
             width: 100%;
-            height: 100%;
+            height: 100vh;
         }
         </style>
         <title>BISELCO FRANCHISE MAP</title>
